--- a/first-prototype/home.html
+++ b/first-prototype/home.html
@@ -6,10 +6,10 @@
   <title>GradeManager</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="homepage">
   <header>
       <img href="home.html" class="logo" src="Logo.png" alt="GradeManager Logo">
-      <h2 class="nav-title">GradeManager</h2>
+      <h2 class="nav-title" href="#" >GradeManager</h2>
     <nav class="navigation">
       <ul class="nav__links">
         <li><a href="#">Statistic</a></li>
@@ -17,7 +17,7 @@
         <li><a href="#">Modules</a></li>
       </ul>
     </nav>
-    <a class="btn1" href="#"><button class="btn sgi">Sign In</button></a>
+    <a class="btn1" href="login-page.html"><button class="btn sgi">Sign In</button></a>
     <a class="btn2" href="#"><button class="btn sgu">Sign Up</button></a>
   </header>
   <main>
